--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -26,6 +26,7 @@
         <ImageView
             android:id="@+id/img1"
             android:layout_width="@dimen/dim_80"
+            android:src="@drawable/place_holder"
             android:layout_height="@dimen/dim_75"
             android:layout_centerHorizontal="true" />
 
@@ -52,6 +53,7 @@
             android:id="@+id/img2"
             android:layout_width="@dimen/dim_80"
             android:layout_height="@dimen/dim_75"
+            android:src="@drawable/place_holder"
             android:layout_centerHorizontal="true" />
 
         <com.localfriend.fonts.CustomFontTextView
@@ -79,6 +81,7 @@
             android:id="@+id/img4"
             android:layout_width="@dimen/dim_80"
             android:layout_height="@dimen/dim_75"
+            android:src="@drawable/place_holder"
             android:layout_centerHorizontal="true" />
 
         <com.localfriend.fonts.CustomFontTextView
@@ -106,6 +109,7 @@
             android:id="@+id/img3"
             android:layout_width="@dimen/dim_80"
             android:layout_height="@dimen/dim_75"
+            android:src="@drawable/place_holder"
             android:layout_centerHorizontal="true" />
 
         <com.localfriend.fonts.CustomFontTextView
