--- a/app/src/main/res/layout/activity_login_signup.xml
+++ b/app/src/main/res/layout/activity_login_signup.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/main_gradient_bg"
+    android:background="@drawable/gradient_new"
     android:orientation="vertical"
     android:fitsSystemWindows="true"
     android:id="@+id/ll_main"
@@ -68,6 +68,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="@dimen/dim_25"
+        android:alpha=".9"
         android:background="@drawable/rounded_corner_white"
         android:gravity="center"
         android:padding="@dimen/dim_10"
