--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -37,7 +37,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:text="@string/about_us"
-                android:textColor="@color/transparent"
+                android:textColor="@color/gray_text"
                 android:textSize="16sp"
                 app:textStyle="@integer/roboto_medium" />
 
