--- a/app/src/main/res/drawable-hdpi/tv_bg.xml
+++ b/app/src/main/res/drawable-hdpi/tv_bg.xml
@@ -4,6 +4,6 @@
     <solid
         android:color="@null"/>
     <stroke
-        android:width="@dimen/dim_2"
-        android:color="#DEE0E0"/>
+        android:width="1dp"
+        android:color="@color/gray_text_light"/>
 </shape> 
