--- a/app/src/main/res/drawable/rounded_corner_blue.xml
+++ b/app/src/main/res/drawable/rounded_corner_blue.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#59AEB3" />
+    <solid android:color="#5559AEB3" />
 
     <corners
         android:radius="@dimen/dim_5"/>
