--- a/app/src/main/res/layout/activity_order_placed.xml
+++ b/app/src/main/res/layout/activity_order_placed.xml
@@ -34,7 +34,8 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="10dp"
             android:gravity="center"
-            android:padding="15dp"
+            android:padding="10dp"
+            android:textColor="@color/colorPrimaryDark"
             android:text="Go to shopping"
             android:textSize="18sp"
             app:textStyle="@integer/roboto_medium" />
@@ -46,9 +47,9 @@
             android:layout_above="@+id/txt_go_shopping"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
-            android:background="@drawable/rounded_gredient"
+            android:background="@drawable/curvy_gradient_white_bg"
             android:gravity="center"
-            android:padding="15dp"
+            android:padding="10dp"
             android:text="Track your order"
             android:textColor="@color/white"
             android:textSize="18sp"
@@ -59,9 +60,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/txt_track_order"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="15dp"
             android:gravity="center_horizontal"
-            android:padding="20dp"
+            android:padding="15dp"
             android:text="We will send you notification when the order will be delivered."
             android:textColor="@color/gray_tab"
             app:textStyle="@integer/roboto_medium" />
@@ -72,8 +73,8 @@
             android:layout_above="@+id/txt_notification"
             android:gravity="center_horizontal"
             android:text="Congratulations!!\nYour order is on the way"
-            android:textColor="@color/black"
-            android:textSize="25sp"
+            android:textColor="@color/gray_text"
+            android:textSize="22sp"
             app:textStyle="@integer/roboto_bold" />
     </RelativeLayout>
 </RelativeLayout>
