--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -36,7 +36,7 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/dim_230"
-                        android:background="@drawable/main_gradient_bg"
+                        android:background="@drawable/profile_bg"
                         app:layout_collapseMode="parallax"
                         app:layout_collapseParallaxMultiplier="0.7">
 
@@ -52,6 +52,7 @@
                             android:layout_height="@dimen/dim_100"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="@dimen/dim_50"
+                            android:src="@drawable/default_pic"
                             app:civ_border_color="#ffffff"
                             app:civ_border_width="1dp" />
 
@@ -254,6 +255,19 @@
                         android:inputType="phone"
                         android:padding="10dp"
                         android:textSize="16sp" />
+
+                    <com.localfriend.fonts.CustomFontTextView
+                        android:id="@+id/txt_logout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/dim_20"
+                        android:layout_marginTop="20dp"
+                        android:background="@drawable/curvy_gradient_white_bg"
+                        android:padding="10dp"
+                        android:text="Logout"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        app:textStyle="@integer/roboto_regular" />
                 </LinearLayout>
             </android.support.v4.widget.NestedScrollView>
 
