--- a/app/src/main/res/layout/activity_signup_four.xml
+++ b/app/src/main/res/layout/activity_signup_four.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_gradient_bg"
+    android:background="@drawable/gradient_new"
     android:fitsSystemWindows="true"
     tools:context="com.localfriend.SignupActivityFour">
 
@@ -14,19 +14,20 @@
         android:id="@+id/lnr_verification"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/dim_10"
-        android:layout_below="@+id/toolbar_common"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/toolbar_common"
+        android:orientation="vertical"
+        android:padding="@dimen/dim_10">
 
-        <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
+        <com.localfriend.fonts.CustomFontTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Enter your password"
             android:textColor="@color/white"
             android:textSize="@dimen/dim_18"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:textStyle="@integer/roboto_medium" />
 
 
         <EditText
@@ -48,8 +49,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/lnr_verification"
         android:layout_centerHorizontal="true"
-        android:background="@null"
         android:adjustViewBounds="true"
+        android:background="@null"
         android:src="@drawable/panda_new_with_pt_sans" />
 
     <RelativeLayout
@@ -59,16 +60,17 @@
         android:layout_marginBottom="@dimen/dim_15"
         android:padding="@dimen/dim_10">
 
-        <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
+        <com.localfriend.fonts.CustomFontTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:text="Step 4 of 4"
             android:textColor="@color/white"
             android:textSize="@dimen/dim_18"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:textStyle="@integer/roboto_medium" />
 
-        <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
+        <com.localfriend.fonts.CustomFontTextView
             android:id="@+id/tv_btn_signup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -82,6 +84,7 @@
             android:paddingTop="@dimen/dim_12"
             android:text="SIGN UP"
             android:textColor="@color/blue_text"
-            android:textSize="@dimen/dim_14" />
+            android:textSize="@dimen/dim_14"
+            app:textStyle="@integer/roboto_medium" />
     </RelativeLayout>
 </RelativeLayout>
