--- a/app/src/main/res/layout/all_items.xml
+++ b/app/src/main/res/layout/all_items.xml
@@ -26,7 +26,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="55dp"
         android:background="@null"
-        android:src="@drawable/bakery" />
+        android:src="@drawable/place_holder" />
 
     <com.localfriend.fonts.CustomFontTextView
         android:id="@+id/tv_item_name"
