--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -22,8 +22,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_gravity="right|top"
-            android:layout_marginTop="-5dp"
-            android:layout_marginRight="-5dp"
             android:background="@null"
             android:padding="5dp"
             android:src="@drawable/button_delete_big" />
@@ -39,6 +37,7 @@
                 android:layout_height="60dp"
                 android:layout_centerVertical="true"
                 android:background="@null"
+                android:src="@drawable/place_holder"
                 android:scaleType="centerInside" />
 
             <RelativeLayout
