--- a/app/src/main/res/layout/checkout_item.xml
+++ b/app/src/main/res/layout/checkout_item.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
     android:layout_marginTop="10dp"
-    android:layout_marginRight="10dp"
     android:orientation="vertical">
 
     <com.localfriend.fonts.CustomFontTextView
@@ -13,34 +13,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DELIVERY TIMING"
-        android:textSize="16sp"
+        android:textColor="@color/gray_text_light"
+        android:textSize="15sp"
         app:textStyle="@integer/roboto_medium" />
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dim_5"
-        android:elevation="@dimen/dim_10"
-        app:cardBackgroundColor="@color/white">
+        app:cardUseCompatPadding="true"
+        android:layout_marginRight="-10dp"
+        android:layout_marginLeft="-10dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardElevation="2dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingBottom="5dp"
-            android:paddingTop="10dp">
+            android:paddingTop="8dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="5dp">
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                 >
 
                 <com.localfriend.fonts.CustomFontTextView
                     android:id="@+id/txt_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginLeft="10dp"
                     android:text="Total Price :- Rs 100"
                     android:textColor="@color/black"
                     android:textSize="15sp"
@@ -51,13 +56,24 @@
                     android:id="@+id/txt_view_items"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:drawableRight="@drawable/ic_expand_more"
+                    android:layout_toLeftOf="@+id/img_view_items"
                     android:gravity="center_vertical"
                     android:text="View items"
+                    android:padding="5dp"
                     android:textColor="@color/blue_text"
-                    android:textSize="15sp"
+                    android:textSize="12sp"
                     app:textStyle="@integer/roboto_medium" />
+
+                <ImageView
+                    android:id="@+id/img_view_items"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:alpha=".5"
+                    android:layout_marginRight="10dp"
+                    android:background="@null"
+                    android:src="@drawable/ic_down" />
             </RelativeLayout>
 
             <View
@@ -75,7 +91,8 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:gravity="center_vertical"
-                    android:paddingTop="@dimen/dim_15"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="5dp"
                     android:text="Tomorrow, 8 AM - 10 AM"
                     android:textColor="@color/blue_text"
                     android:textSize="12sp"
@@ -88,9 +105,11 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginTop="@dimen/dim_5"
+                    android:alpha=".5"
                     android:background="@null"
+                    android:layout_marginRight="10dp"
                     android:padding="4dp"
-                    android:src="@drawable/ic_expand_more" />
+                    android:src="@drawable/ic_down" />
             </RelativeLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
