--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,8 +10,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.6"
-        android:background="#BEE9FC">
+        android:layout_weight="1.85"
+        android:background="#ffffff">
 
         <pl.droidsonroids.gif.GifImageView
             android:id="@+id/gif_loader"
@@ -56,13 +56,39 @@
                 android:layout_height="wrap_content">
 
                 <LinearLayout
+                    android:id="@+id/lrn_discount"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:padding="@dimen/dim_10">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:background="@null"
+                        android:src="@drawable/morning_need" />
+
+                    <com.localfriend.fonts.CustomFontPtSansText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:text="Morning meals"
+                        android:textColor="@color/gray_text"
+                        android:textSize="12sp"
+                        app:textStyle="@integer/roboto_medium" />
+                </LinearLayout>
+
+                <LinearLayout
                     android:id="@+id/lrn_tiffin"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:layout_weight="1"
-                    android:background="?attr/selectableItemBackgroundBorderless"
                     android:orientation="vertical"
                     android:padding="@dimen/dim_10">
 
@@ -89,7 +115,6 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_weight="1"
-                    android:background="?attr/selectableItemBackgroundBorderless"
                     android:orientation="vertical"
                     android:padding="@dimen/dim_10">
 
@@ -110,6 +135,13 @@
                         app:textStyle="@integer/roboto_medium" />
                 </LinearLayout>
 
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
                 <LinearLayout
                     android:id="@+id/lrn_fruit"
                     android:layout_width="0dp"
@@ -117,7 +149,6 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_weight="1"
-                    android:background="?attr/selectableItemBackgroundBorderless"
                     android:orientation="vertical"
                     android:padding="@dimen/dim_10">
 
@@ -137,39 +168,7 @@
                         android:textSize="12sp"
                         app:textStyle="@integer/roboto_medium" />
                 </LinearLayout>
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <LinearLayout
-                    android:id="@+id/lrn_food"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:layout_weight="1"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:orientation="vertical"
-                    android:padding="@dimen/dim_10">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:background="@null"
-                        android:src="@drawable/fast_food_home" />
-
-                    <com.localfriend.fonts.CustomFontPtSansText
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:text="Fast Food"
-                        android:textColor="@color/gray_text"
-                        android:textSize="12sp"
-                        app:textStyle="@integer/roboto_medium" />
-                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/lrn_mithaiwala"
@@ -177,7 +176,6 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_weight="1"
-                    android:background="?attr/selectableItemBackgroundBorderless"
                     android:orientation="vertical"
                     android:padding="@dimen/dim_10">
 
@@ -199,13 +197,12 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/lrn_discount"
+                    android:id="@+id/lrn_food"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:layout_weight="1"
-                    android:background="?attr/selectableItemBackgroundBorderless"
                     android:orientation="vertical"
                     android:padding="@dimen/dim_10">
 
@@ -214,13 +211,13 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:background="@null"
-                        android:src="@drawable/hot_deals" />
+                        android:src="@drawable/fast_food_home" />
 
                     <com.localfriend.fonts.CustomFontPtSansText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:text="Hot Deals"
+                        android:text="Fast Food"
                         android:textColor="@color/gray_text"
                         android:textSize="12sp"
                         app:textStyle="@integer/roboto_medium" />
