--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/light_bg"
     tools:context="com.localfriend.fragments.PaymentFragment">
 
     <ScrollView
@@ -18,26 +18,29 @@
             android:paddingBottom="@dimen/dim_20">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="50dp"
                 android:background="@null"
+                android:scaleType="centerInside"
                 android:src="@drawable/payment_new" />
 
             <com.localfriend.fonts.CustomFontTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Please Choose Your Payment Method"
-                android:textColor="@color/black"
                 android:layout_marginBottom="10dp"
-                android:textSize="18sp"
+                android:layout_marginTop="50dp"
+                android:text="Please Choose Your Payment Method"
+                android:textColor="@color/gray_text_light"
+                android:textSize="16sp"
                 app:textStyle="@integer/roboto_medium" />
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                app:cardElevation="@dimen/dim_5">
+                android:layout_margin="15dp">
 
                 <RelativeLayout
                     android:id="@+id/rl_cod"
@@ -51,11 +54,11 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:drawableLeft="@drawable/ic_cod"
-                        android:drawablePadding="@dimen/dim_10"
+                        android:drawablePadding="10dp"
                         android:text="Cash on Delivery"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/dim_18"
-                        app:textStyle="@integer/roboto_medium" />
+                        android:textSize="16sp"
+                        app:textStyle="@integer/roboto_regular" />
 
                     <RadioButton
                         android:layout_width="wrap_content"
@@ -115,8 +118,8 @@
         android:background="@drawable/curvy_gradient_white_bg"
         android:gravity="center"
         android:padding="@dimen/dim_10"
-        android:text="REVIEW ORDER"
+        android:text="Review Order"
         android:textColor="@color/white"
-        android:textSize="@dimen/dim_15"
+        android:textSize="16sp"
         app:textStyle="@integer/roboto_medium" />
 </RelativeLayout>
