--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -11,7 +11,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/ll_amounts">
+        android:layout_above="@+id/card_price">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,15 +30,19 @@
                 <com.localfriend.fonts.CustomFontTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="DELIVERY ADDRESS"
-                    android:textSize="16sp"
+                    android:text="Delivery Address"
+                    android:layout_marginLeft="3dp"
+                    android:textColor="@color/gray_text_light"
+                    android:textSize="15sp"
                     app:textStyle="@integer/roboto_medium" />
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:elevation="@dimen/dim_10"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:elevation="5dp"
                     app:cardBackgroundColor="@color/white">
 
                     <RelativeLayout
@@ -78,7 +82,6 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="8dp"
                                 android:layout_marginLeft="@dimen/dim_10"
-                                android:layout_marginTop="-8dp"
                                 android:paddingLeft="@dimen/dim_5"
                                 android:textColor="@color/gray_tab"
                                 app:textStyle="@integer/roboto_medium" />
@@ -92,16 +95,20 @@
                 <com.localfriend.fonts.CustomFontTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:text="PAYMENT MODE"
-                    android:textSize="16sp"
+                    android:layout_marginTop="12dp"
+                    android:text="Payment mode"
+                    android:layout_marginLeft="5dp"
+                    android:textColor="@color/gray_text_light"
+                    android:textSize="15sp"
                     app:textStyle="@integer/roboto_medium" />
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    app:cardElevation="@dimen/dim_5">
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="5dp"
+                     >
 
                     <RelativeLayout
                         android:id="@+id/rl_cod"
@@ -118,15 +125,16 @@
                             android:drawablePadding="@dimen/dim_10"
                             android:text="Cash on Delivery"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/dim_18"
-                            app:textStyle="@integer/roboto_medium" />
+                            android:padding="5dp"
+                            android:textSize="16sp"
+                            app:textStyle="@integer/roboto_regular" />
 
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:checked="true" />
+                        <!--<RadioButton-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_alignParentRight="true"-->
+                            <!--android:layout_centerVertical="true"-->
+                            <!--android:checked="true" />-->
                     </RelativeLayout>
                 </android.support.v7.widget.CardView>
 
@@ -147,102 +155,90 @@
         </LinearLayout>
     </ScrollView>
 
-    <LinearLayout
-        android:id="@+id/ll_amounts"
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/tv_make_payment"
-        android:background="@color/white"
-        android:orientation="horizontal">
+        android:layout_marginBottom="5dp"
+        android:visibility="visible">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:id="@+id/ll_amounts"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingBottom="8dp"
-            android:paddingTop="8dp">
+            android:layout_above="@+id/tv_make_payment"
+            android:layout_marginTop="8dp"
+            android:background="@color/white"
+            android:orientation="horizontal">
 
-            <com.localfriend.fonts.CustomFontTextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Sub Total"
-                android:textColor="@color/blue_text"
-                android:textSize="16sp"
-                app:textStyle="@integer/roboto_regular" />
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:paddingBottom="5dp">
 
-            <com.localfriend.fonts.CustomFontTextView
-                android:id="@+id/txt_subtotal"
-                android:layout_width="wrap_content"
+                <com.localfriend.fonts.CustomFontTextView
+                    android:id="@+id/txt_subtotal_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Total Amount"
+                    android:textColor="@color/blue_text"
+                    android:textSize="14sp"
+                    app:textStyle="@integer/roboto_regular" />
+
+                <com.localfriend.fonts.CustomFontTextView
+                    android:id="@+id/txt_subtotal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/dim_3"
+                    android:text="Rs. 120"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    app:textStyle="@integer/roboto_regular" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="1px"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/gray_tab" />
+
+
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="4dp"
-                android:text="Rs. 120"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:textStyle="@integer/roboto_regular" />
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <com.localfriend.fonts.CustomFontTextView
+                    android:id="@+id/txt_total_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Payble amount"
+                    android:textColor="@color/blue_text"
+                    android:textSize="14sp"
+                    app:textStyle="@integer/roboto_regular" />
+
+                <com.localfriend.fonts.CustomFontTextView
+                    android:id="@+id/txt_total"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/dim_5"
+                    android:text="Rs. 120"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    app:textStyle="@integer/roboto_regular" />
+            </LinearLayout>
+
         </LinearLayout>
-
-        <View
-            android:layout_width="@dimen/dim_1"
-            android:layout_height="match_parent"
-            android:background="@color/blue_text" />
-
-        <!--<LinearLayout-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight="1"-->
-            <!--android:orientation="vertical"-->
-            <!--android:paddingBottom="10dp"-->
-            <!--android:paddingTop="10dp">-->
-
-            <!--<EditText-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginTop="@dimen/dim_5"-->
-                <!--android:background="@null"-->
-                <!--android:gravity="center"-->
-                <!--android:hint="Promo code"-->
-                <!--android:padding="5dp"-->
-                <!--android:textSize="16sp" />-->
-        <!--</LinearLayout>-->
-
-        <View
-            android:layout_width="@dimen/dim_1"
-            android:layout_height="match_parent"
-            android:background="@color/blue_text" />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingBottom="8dp"
-            android:paddingTop="8dp">
-
-            <com.localfriend.fonts.CustomFontTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Total Amount"
-                android:textColor="@color/blue_text"
-                android:textSize="16sp"
-                app:textStyle="@integer/roboto_regular" />
-
-            <com.localfriend.fonts.CustomFontTextView
-                android:id="@+id/txt_toal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="4dp"
-                android:text="Rs. 120"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:textStyle="@integer/roboto_regular" />
-        </LinearLayout>
-
-    </LinearLayout>
+    </android.support.v7.widget.CardView>
 
     <com.localfriend.fonts.CustomFontTextView
             android:id="@+id/tv_make_payment"
