--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -11,7 +11,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/ll_amounts">
+        android:layout_above="@+id/card_price">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,23 +22,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:paddingTop="@dimen/dim_10"
+                android:paddingBottom="5dp"
                 android:paddingLeft="@dimen/dim_10"
                 android:paddingRight="@dimen/dim_10"
-                android:paddingBottom="5dp"
-                >
+                android:paddingTop="@dimen/dim_10">
 
                 <com.localfriend.fonts.CustomFontTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="DELIVERY ADDRESS"
-                    android:textSize="16sp"
+                    android:text="Delivery Address"
+                    android:layout_marginLeft="3dp"
+                    android:textColor="@color/gray_text_light"
+                    android:textSize="15sp"
                     app:textStyle="@integer/roboto_medium" />
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dim_10"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
                     android:elevation="@dimen/dim_10"
                     app:cardBackgroundColor="@color/white">
 
@@ -70,7 +73,7 @@
                                 android:layout_marginTop="-5dp"
                                 android:padding="@dimen/dim_5"
                                 android:textColor="@color/black"
-                                android:textSize="@dimen/dim_18"
+                                android:textSize="18sp"
                                 app:textStyle="@integer/roboto_medium" />
 
                             <com.localfriend.fonts.CustomFontTextView
@@ -79,38 +82,32 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="10dp"
                                 android:layout_marginLeft="@dimen/dim_10"
-                                android:padding="@dimen/dim_5"
+                                android:padding="5dp"
                                 android:textColor="@color/gray_tab"
                                 app:textStyle="@integer/roboto_medium" />
 
 
                         </LinearLayout>
 
-                        <com.localfriend.fonts.CustomFontTextView
+                        <ImageView
                             android:id="@+id/txt_add_address"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:background="@drawable/tv_bg"
-                            android:gravity="center"
-                            android:paddingBottom="@dimen/dim_10"
-                            android:paddingLeft="@dimen/dim_20"
-                            android:paddingRight="@dimen/dim_20"
-                            android:paddingTop="@dimen/dim_10"
-                            android:text="      +  ADD ADDRESS       "
-                            android:textSize="16sp"
-                            app:textStyle="@integer/roboto_medium" />
+                            android:src="@drawable/add_address"
+                            android:text="+  Add Address"
+                            android:textColor="@color/gray_text_light"
+                            />
 
                         <ImageView
                             android:id="@+id/img_change"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
                             android:layout_alignParentRight="true"
                             android:padding="5dp"
                             android:src="@drawable/edit_address"
                             android:visibility="visible"
-
-                             />
+                            />
                     </RelativeLayout>
 
                 </android.support.v7.widget.CardView>
@@ -132,85 +129,90 @@
         </LinearLayout>
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/ll_amounts"
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/tv_make_payment"
-        android:background="@color/white"
-        android:orientation="horizontal">
+        android:layout_marginBottom="10dp"
+        android:visibility="visible">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:id="@+id/ll_amounts"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingBottom="10dp"
-            android:paddingTop="5dp">
+            android:layout_above="@+id/tv_make_payment"
+            android:layout_marginTop="8dp"
+            android:background="@color/white"
+            android:orientation="horizontal">
 
-            <com.localfriend.fonts.CustomFontPtSansText
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Total Amount"
-                android:textColor="@color/blue_text"
-                android:textSize="16sp"
-                app:textStyle="@integer/roboto_regular" />
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:paddingBottom="5dp">
 
-            <com.localfriend.fonts.CustomFontTextView
-                android:id="@+id/txt_subtotal"
-                android:layout_width="wrap_content"
+                <com.localfriend.fonts.CustomFontTextView
+                    android:id="@+id/txt_subtotal_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Total Amount"
+                    android:textColor="@color/blue_text"
+                    android:textSize="14sp"
+                    app:textStyle="@integer/roboto_regular" />
+
+                <com.localfriend.fonts.CustomFontTextView
+                    android:id="@+id/txt_subtotal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/dim_3"
+                    android:text="Rs. 120"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    app:textStyle="@integer/roboto_regular" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="1px"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/gray_tab" />
+
+
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/dim_5"
-                android:text="Rs. 120"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:textStyle="@integer/roboto_regular" />
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <com.localfriend.fonts.CustomFontTextView
+                    android:id="@+id/txt_total_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Payble amount"
+                    android:textColor="@color/blue_text"
+                    android:textSize="14sp"
+                    app:textStyle="@integer/roboto_regular" />
+
+                <com.localfriend.fonts.CustomFontTextView
+                    android:id="@+id/txt_total"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/dim_5"
+                    android:text="Rs. 120"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    app:textStyle="@integer/roboto_regular" />
+            </LinearLayout>
+
         </LinearLayout>
-
-        <View
-            android:layout_width="@dimen/dim_1"
-            android:layout_height="match_parent"
-            android:background="@color/blue_text" />
-
-
-
-        <View
-            android:layout_width="@dimen/dim_1"
-            android:layout_height="match_parent"
-            android:background="@color/blue_text" />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingBottom="10dp"
-            android:paddingTop="5dp">
-
-            <com.localfriend.fonts.CustomFontPtSansText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Payble amount"
-                android:textColor="@color/blue_text"
-                android:textSize="16sp"
-                app:textStyle="@integer/roboto_regular" />
-
-            <com.localfriend.fonts.CustomFontTextView
-                android:id="@+id/txt_toal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/dim_5"
-                android:text="Rs. 120"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:textStyle="@integer/roboto_regular" />
-        </LinearLayout>
-
-    </LinearLayout>
+    </android.support.v7.widget.CardView>
 
     <com.localfriend.fonts.CustomFontTextView
         android:id="@+id/tv_make_payment"
@@ -220,20 +222,21 @@
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginTop="5dp"
         android:background="@drawable/curvy_gradient_white_bg"
         android:gravity="center"
         android:padding="@dimen/dim_10"
-        android:text="MAKE PAYMENT"
+        android:text="Make Payment"
         android:textColor="@color/white"
-        android:textSize="@dimen/dim_15"
+        android:textSize="16sp"
         app:textStyle="@integer/roboto_medium" />
 
-    <RelativeLayout
+    <FrameLayout
         android:id="@+id/rl_timestamp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:background="#88000000"
+        android:elevation="10dp"
         android:visibility="gone">
 
         <com.aigestudio.wheelpicker.WheelPicker
@@ -265,5 +268,5 @@
             android:textSize="18sp"
             android:visibility="visible"
             app:textStyle="@integer/roboto_bold" />
-    </RelativeLayout>
+    </FrameLayout>
 </RelativeLayout>
