--- a/app/src/main/res/layout/item_view_items.xml
+++ b/app/src/main/res/layout/item_view_items.xml
@@ -43,6 +43,7 @@
                     android:layout_height="60dp"
                     android:layout_centerVertical="true"
                     android:background="@null"
+                    android:src="@drawable/place_holder"
                     android:scaleType="centerInside" />
 
                 <RelativeLayout
