--- a/app/src/main/res/layout/vegetable_items.xml
+++ b/app/src/main/res/layout/vegetable_items.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="@dimen/dim_230"
+    android:layout_height="240dp"
     android:background="@drawable/veg_shadow_card_cropped">
 
     <RelativeLayout
@@ -24,8 +24,8 @@
             android:id="@+id/tv_cost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/tv_cost_old"
             android:layout_marginTop="10dp"
+            android:layout_toRightOf="@+id/tv_cost_old"
             android:padding="@dimen/dim_3"
             android:textColor="@color/gray_text"
             android:textSize="16sp"
@@ -41,39 +41,44 @@
             android:padding="10dp"
             android:src="@drawable/wish_deactive" />
 
-        <ImageView
-            android:id="@+id/img_veg"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="35dp"
-            android:background="@null"
-            android:src="@drawable/apple" />
-
-        <com.localfriend.fonts.CustomFontTextView
-            android:id="@+id/tv_veg_name"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/img_veg"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="8dp"
-            android:gravity="center"
-            android:text="Shimla Apple"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            app:textStyle="@integer/roboto_medium" />
+            android:layout_marginBottom="15dp"
+            android:layout_above="@+id/tv_add_cart">
 
-        <com.localfriend.fonts.CustomFontTextView
-            android:id="@+id/txt_unit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_veg_name"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:text="Shimla Apple"
-            android:textColor="@color/gray_tab"
-            android:textSize="15sp"
-            app:textStyle="@integer/roboto_medium" />
+            <ImageView
+                android:id="@+id/img_veg"
+                android:layout_width="85dp"
+                android:layout_height="85dp"
+                android:layout_centerHorizontal="true"
+                android:background="@null"
+                android:src="@drawable/place_holder" />
+
+            <com.localfriend.fonts.CustomFontTextView
+                android:id="@+id/tv_veg_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/img_veg"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:text="Shimla Apple"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:textStyle="@integer/roboto_medium" />
+
+            <com.localfriend.fonts.CustomFontTextView
+                android:id="@+id/txt_unit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_veg_name"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:text="Shimla Apple"
+                android:textColor="@color/gray_tab"
+                android:textSize="15sp"
+                app:textStyle="@integer/roboto_medium" />
+        </RelativeLayout>
 
         <!--<View-->
         <!--android:layout_width="match_parent"-->
@@ -87,9 +92,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="8dp"
             android:drawableLeft="@drawable/cart_new"
-            android:drawablePadding="8dp"
+            android:drawablePadding="5dp"
             android:gravity="center"
             android:padding="8dp"
             android:text="Add to cart"
@@ -97,6 +102,7 @@
             android:textSize="14sp"
             app:textStyle="@integer/roboto_medium" />
     </RelativeLayout>
+
     <ImageView
         android:id="@+id/img_anim"
         android:layout_width="wrap_content"
