--- a/app/src/main/res/layout/wishlist_item.xml
+++ b/app/src/main/res/layout/wishlist_item.xml
@@ -22,11 +22,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_gravity="right|top"
-            android:layout_marginTop="-5dp"
             android:alpha=".5"
             android:background="@null"
             android:padding="5dp"
-            android:src="@drawable/ic_delete" />
+            android:src="@drawable/button_delete_big" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -39,6 +38,7 @@
                 android:layout_height="60dp"
                 android:layout_centerVertical="true"
                 android:background="@null"
+                android:src="@drawable/place_holder"
                 android:scaleType="centerInside" />
 
             <RelativeLayout
